--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,19 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          version: latest
-
+          bun-version: 'latest'
+      
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'
-          
+
+      - name: .env setting
+        run: |
+          echo "VITE_YOUTUBE_API_KEY=${{ secrets.VITE_YOUTUBE_API_KEY }}" >> .env
+
       - name: Install dependencies
         run: |
-          pnpm install
-          pnpm run build
+          bun install
+          bun run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
