--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-youtube": "^10.1.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
