--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "6.28.0",
     "react-youtube": "^10.1.0"
   },
   "lint-staged": {
